--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    /* background-image: linear-gradient(180deg,#f59191,#b4889e); */
+    background-color: honeydew;
     background-repeat: no-repeat;
     margin: 0px 10px;
 
@@ -24,7 +24,7 @@ h3 {
 .header {
     width: 100%;
     margin: auto;
-    /* border: 1px solid red; */
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -38,7 +38,7 @@ h3 {
 .first {
     width: 100%;
     height: 1.5rem;
-    /* border: 1px solid red; */
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -48,7 +48,7 @@ h3 {
 }
 
 #self {
-    /* border: 1px solid red; */
+
     font-size: 0.7rem;
     display: flex;
     justify-content: space-around;
@@ -59,7 +59,7 @@ h3 {
 }
 
 #social {
-    /* border: 1px solid red; */
+
     font-size: 0.7rem;
     padding: 0.3rem;
     margin: 0.2rem;
@@ -69,7 +69,7 @@ h3 {
 .logo h1 {
     margin: 10px;
     padding-left: 0.5rem;
-    /* border: 1px solid red; */
+
     font-size: 3.0rem;
     font-style: italic;
     text-transform: capitalize;
@@ -119,6 +119,7 @@ h3 {
     .nav {
         flex-direction: column;
         width: 100%;
+        align-items: center;
 
     }
 }
@@ -130,7 +131,8 @@ h3 {
 
     }
 }
-.detail{
+
+.detail {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -138,17 +140,35 @@ h3 {
 
 }
 
-.text,.img{
+.text,
+.img {
     width: 50%;
-    border: 1px solid red;
+
     height: 200px;
     margin: 10px 5px;
     padding: 10px;
 }
-.img img{
+
+.text {
+    overflow: auto;
+}
+
+@media screen and (max-width: 500px) {
+    .detail {
+        flex-direction: column;
+    }
+
+    .text,
+    .img {
+        width: 100%;
+
+    }
+}
+
+.img img {
     object-fit: cover;
     width: 100%;
-    border: 1px solid red;
+
     height: 180px;
 }
 
@@ -156,7 +176,7 @@ h3 {
     display: flex;
     align-items: flex-start;
     justify-content: space-around;
-    border: 2px solid rgb(121, 206, 231);
+
     border-radius: 10px;
     margin: 10px 0px;
     padding: 10px 0px;
@@ -176,11 +196,11 @@ h3 {
 .link {
     width: 50%;
     height: 180px;
-    border: 1px solid wheat;
+
     border-radius: 10px;
     background-color: white;
-    margin: 5px 10px;
-    box-shadow: 10px 10px 8px #888888;
+    margin: 5px;
+    box-shadow: 10px 10px 10px 5px #888888;
     text-align: center;
 }
 
@@ -192,4 +212,18 @@ h3 {
 .link li a:hover {
     background-color: rgb(118, 118, 248);
     color: white;
+}
+
+@media screen and (max-width: 500px) {
+    .footer {
+        flex-direction: column;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .link {
+        display: none;
+    }
 }
